--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-calendar": "^0.28.22",
+    "angularx-flatpickr": "^6.5.2",
+    "date-fns": "^2.19.0",
     "firebase": "^8.2.9",
+    "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
