--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-calendar": "^0.28.22",
     "angularx-flatpickr": "^6.5.2",
     "date-fns": "^2.19.0",
+    "file-saver": "^2.0.5",
     "firebase": "^8.2.9",
     "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
