--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "angular-calendar": "^0.28.22",
     "angularx-flatpickr": "^6.5.2",
+    "animate.css": "^4.1.1",
     "date-fns": "^2.19.0",
     "file-saver": "^2.0.5",
     "firebase": "^8.2.9",
