--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "angular-calendar": "^0.28.22",
     "angularx-flatpickr": "^6.5.2",
     "animate.css": "^4.1.1",
+    "chartjs-plugin-datalabels": "^1.0.0",
     "date-fns": "^2.19.0",
     "file-saver": "^2.0.5",
     "firebase": "^8.2.9",
     "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.4.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.15.5",
