--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-calendar": "^0.28.22",
     "angularx-flatpickr": "^6.5.2",
     "animate.css": "^4.1.1",
+    "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^1.0.0",
     "date-fns": "^2.19.0",
     "file-saver": "^2.0.5",
