--- a/package.json
+++ b/package.json
@@ -1,62 +1,65 @@
 {
-  "name": "dermasoft",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~10.1.4",
-    "@angular/common": "~10.1.4",
-    "@angular/compiler": "~10.1.4",
-    "@angular/core": "~10.1.4",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "~10.1.4",
-    "@angular/platform-browser": "~10.1.4",
-    "@angular/platform-browser-dynamic": "~10.1.4",
-    "@angular/router": "~10.1.4",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "angular-calendar": "^0.28.22",
-    "angularx-flatpickr": "^6.5.2",
-    "animate.css": "^4.1.1",
-    "chart.js": "^2.9.3",
-    "chartjs-plugin-datalabels": "^1.0.0",
-    "date-fns": "^2.19.0",
-    "file-saver": "^2.0.5",
-    "firebase": "^8.2.9",
-    "flatpickr": "^4.6.9",
-    "jquery": "^3.6.0",
-    "ng2-charts": "^2.4.2",
-    "ngx-pagination": "^5.0.0",
-    "rxjs": "~6.6.0",
-    "sweetalert2": "^10.15.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.4",
-    "@angular/cli": "~10.1.4",
-    "@angular/compiler-cli": "~10.1.4",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.5.5",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
-  }
+    "name": "dermasoft",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~10.1.4",
+        "@angular/common": "~10.1.4",
+        "@angular/compiler": "~10.1.4",
+        "@angular/core": "~10.1.4",
+        "@angular/fire": "^6.1.4",
+        "@angular/forms": "~10.1.4",
+        "@angular/platform-browser": "~10.1.4",
+        "@angular/platform-browser-dynamic": "~10.1.4",
+        "@angular/router": "~10.1.4",
+        "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+        "angular-calendar": "^0.28.22",
+        "angularx-flatpickr": "^6.5.2",
+        "animate.css": "^4.1.1",
+        "chart.js": "^2.9.3",
+        "chartjs-plugin-datalabels": "^1.0.0",
+        "date-fns": "^2.19.0",
+        "file-saver": "^2.0.5",
+        "firebase": "^8.2.9",
+        "flatpickr": "^4.6.9",
+        "jquery": "^3.6.0",
+        "ng2-charts": "^2.4.2",
+        "ngx-pagination": "^5.0.0",
+        "rxjs": "~6.6.0",
+        "sweetalert2": "^10.15.5",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.10.2",
+        "sockjs-client": "^1.6.0",
+        "stompjs": "^2.3.3",
+        "net": "^1.0.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1001.4",
+        "@angular/cli": "~10.1.4",
+        "@angular/compiler-cli": "~10.1.4",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/jquery": "^3.5.5",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~4.0.2"
+    }
 }
